dlcopy (201511021701-1) lernstick-8; urgency=medium

  * [c96fe3] fixed copy-up of printer settings

 -- Ronny Standtke <ronny.standtke@gmx.net>  Mon, 02 Nov 2015 17:01:09 +0100

dlcopy (201510141203-1) lernstick-8; urgency=medium

  * [b37f19] more comments and logging, added some checks to prevent unnecessary process calls
  * [0c000e] reconfigure GRUB even when XMLboot config file is not found (important for GRUB on exchange partition) renamed XmlBootConfigUtil to BootConfigUtil

 -- Ronny Standtke <ronny.standtke@gmx.net>  Wed, 14 Oct 2015 12:03:12 +0200

dlcopy (201510072317-1) lernstick-8; urgency=medium

  * [aa2930] don't try to copy-up named pipes or unix domain sockets

 -- Ronny Standtke <ronny.standtke@gmx.net>  Wed, 07 Oct 2015 23:16:55 +0200

dlcopy (201510051757-1) lernstick-8; urgency=medium

  * [2e0c4e] moved some code to lernstickTools

 -- Ronny Standtke <ronny.standtke@gmx.net>  Mon, 05 Oct 2015 17:57:13 +0200

dlcopy (201510021735-1) lernstick-8; urgency=medium

  * [2fc211] try to preserve personal settings and data from old squashfs
  * [a215ad] fix squashfs handling
  * [a2382b] large code-cleanup
 
 -- Ronny Standtke <ronny.standtke@gmx.net>  Thu, 02 Oct 2015 17:35:21 +0200

dlcopy (201509232020-1) lernstick-8; urgency=medium

  * [fc18bc] rebuild bootlogo (if neccessary)

 -- Ronny Standtke <ronny.standtke@gmx.net>  Wed, 23 Sep 2015 20:20:42 +0200

dlcopy (201509231906-1) lernstick-8; urgency=medium

  * [2419c0] fixed regression in data partition handling

 -- Ronny Standtke <ronny.standtke@gmx.net>  Wed, 23 Sep 2015 19:06:43 +0200

dlcopy (201509071347-1) lernstick-8; urgency=medium

  * [778fe7] fixed another regression in our copy patterns

 -- Ronny Standtke <ronny.standtke@gmx.net>  Mon, 07 Sep 2015 13:47:37 +0200

dlcopy (201509061810-1) lernstick-8; urgency=medium

  * [cef156] fixed regression in copy pattern

 -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 06 Sep 2015 18:10:28 +0200
