@@ -1,33 +1,55 @@
 package ch.fhnw.dlcopy;
 
 import ch.fhnw.filecopier.FileCopier;
+import ch.fhnw.util.StorageDevice;
+import java.beans.PropertyChangeListener;
+import java.util.List;
+import javax.swing.SwingWorker;
 
 /**
- * A common interface for Installer and Upgrader
+ * An abstract base class for Installer and Upgrader
  *
  * @author Ronny Standtke <ronny.standtke@gmx.net>
  */
-public interface InstallerOrUpgrader {
+public abstract class InstallerOrUpgrader extends SwingWorker<Void, Void> 
+        implements PropertyChangeListener {
+
+    protected final DLCopyGUI dlCopyGUI;
+    protected final DLCopy dlCopy;
+    protected final List<StorageDevice> deviceList;
+    protected final FileCopier fileCopier = new FileCopier();
+    protected String exchangePartitionLabel;
+    protected LogindInhibit inhibit;
+    protected int selectionCount;
+    protected int currentDevice;
+
+    public InstallerOrUpgrader(DLCopy dlCopy, DLCopyGUI dlCopyGUI,
+            List<StorageDevice> deviceList, String exchangePartitionLabel) {
+        this.dlCopy = dlCopy;
+        this.dlCopyGUI = dlCopyGUI;
+        this.deviceList = deviceList;
+        this.exchangePartitionLabel = exchangePartitionLabel;
+    }
 
     /**
      * shows that file systems are being created
      */
-    public void showCreatingFileSystems();
+    public abstract void showCreatingFileSystems();
 
     /**
      * shows that files are being copied
      *
      * @param fileCopier the fileCopier used to copy files
      */
-    public void showCopyingFiles(FileCopier fileCopier);
+    public abstract void showCopyingFiles(FileCopier fileCopier);
 
     /**
      * shows that file systems are being unmounted
      */
-    public void showUnmounting();
+    public abstract void showUnmounting();
 
     /**
      * shows that the boot sector is written
      */
-    public void showWritingBootSector();
+    public abstract void showWritingBootSector();
 }
